Fix dialog pos on mobile

--- a/src/app/password-dialog/password-dialog.component.scss
+++ b/src/app/password-dialog/password-dialog.component.scss
@@ -79,3 +79,10 @@
     }
   }
 }
+
+@media (max-width: 600px) {
+  ::ng-deep.cdk-overlay-pane {
+    position: absolute !important;
+    top: 2rem !important;
+  }
+}
